--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,7 @@
 }
 
 header {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 30px;
+    font-size: 2vw;
     text-align: left;
 }
 
@@ -19,8 +18,7 @@ nav {
     margin-top: 10px;
     margin-bottom: 0px;
     text-align: left;
-    font-size: 20px;
-    text-indent: 10%;
+    font-size: 1.5vw;
     font-weight: bold;
 }
 
@@ -32,9 +30,32 @@ section {
 .grid-container {
     display: grid;
     gap: 1vw;
-    font-size: 15px;
+    font-size: 1vw;
     grid-auto-columns: 24%;
     text-transform: lowercase;
+}
+
+@media (max-width: 600px) {
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+        font-size: 15px;
+    }
+
+    header {
+        font-size: 25px;
+    }
+
+    nav {
+        font-size: 20px;
+    }
+
+    footer {
+        position: sticky;
+        left: 0;
+        bottom: 5px;
+        width: 100%;
+    }
 }
 
 .grid-item1 {
@@ -53,7 +74,11 @@ section {
 }
 
 footer {
-    font-size: 10px;
+    font-size: 15px;
     font-style: italic;
     text-align: center;
+    position: fixed;
+    bottom: 5px;
+    width: 99%;
+    border: 1px, dotted, #23ed7e;
 }
